Proper license header

--- a/app/design/frontend/base/default/template/disqus/product_comments.phtml
+++ b/app/design/frontend/base/default/template/disqus/product_comments.phtml
@@ -3,13 +3,25 @@
  * File product_comments.phtml
  * Created: 14.03.2011
  *
- * Disqus integratation to magento e-commerce platform.
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the EULA
+ * It is available through the world-wide-web at this URL:
+ * http://involic.com/license.txt
+ * If you are unable to obtain it through the world-wide-web,
+ * please send an email to license@involic.com so
+ * we can send you a copy immediately.
+ *
+ *
+ * Disqus Lite integratation to magento e-commerce platform.
  * Adding comments box for all product page.
  *
  * @category    Involic
  * @package     Involic_Disqus
  * @copyright   Copyright (c) 2011 by Involic (http://www.involic.com)
+ * @license     http://involic.com/license.txt
  */
+
 ?>
 
 <?php if ($this->isDisqusEnabled()) : ?>
